...
      const val BACKGROUND = "Floating Button Background"
      const val BUTTON = "Expandable Floating Action Button"
    }

    const val FILTER_BUTTON = "Filter Button"

    const val NAVIGATION_BAR = "App Navigation Bar"

    const val STATUS_PILL = "Status Pill %s"
    const val MULTIPLE_SELECT_HEADER = "Multiple Select Header"
  }

  const val LOADING_CONTENT = "LOADING_CONTENT"
  const val LINEAR_LOADING_INDICATOR = "Linear Loading Indicator"
  const val MEDIA_LIST_TAG = "MEDIA_LIST_TAG"
  const val SCROLL_TO_TOP_BUTTON = "SCROLL_TO_TOP_BUTTON_TAG"
  const val LOADING_PROGRESS = "Loading Progress Bar"
  const val BLANK_SLATE = "Blank Slate"

  const val LAZY_COLUMN = "Lazy Column"

  const val VIEW_ALL = "View All Button"

  object Rating {
    const val IMDB_RATING = "IMDb Rating"
    const val IMDB_RATING_SKELETON = "IMDb Rating Skeleton"
...

  object Dialogs {
    const val TWO_BUTTON_DIALOG = "Two Button Dialog"
    const val ALERT_DIALOG = "Dialogs Alert Dialog"
    const val CONFIRM_BUTTON = "Dialog Confirm Button"
    const val DISMISS_BUTTON = "Dialog Dismiss Button"
    const val SHARE_ERROR_BUTTON = "Share Error Button"
    const val DELETE_REQUEST = "Delete Request Dialog"
    const val REMOVE_ITEMS_FROM_LIST = "Remove Items From List"

    const val TOGGLE_ALL_SEASONS_SWITCH = "Season Toggle All Switch"
    const val SEASON_SWITCH = "Season Switch %s"
    const val SEASON_ROW = "Season Row %s"
...
    object About {
      const val CARD = "Application About Card"
      const val SCROLLABLE_CONTENT = "About Lazy List"
    }

    object Jellyseerr {
      const val INITIAL_CONTENT = "Jellyseerr Initial Content"
      const val LOGGED_IN_CONTENT = "Jellyseerr Logged In Content"
      const val ADDRESS_TEXT_FIELD = "Jellyseerr Address Text Field"

      const val LOGGED_IN_AVATAR = "Jellyseerr Logged In Avatar"

      const val USERNAME_TEXT_FIELD = "Username input"
      const val PASSWORD_TEXT_FIELD = "Password input"

      const val EMAIL_SUPPORT = "Email support field"
      const val JELLYSEERR_LOGIN_BUTTON = "Jellyseerr Login Button"
      const val JELLYSEERR_LOGOUT_BUTTON = "Jellyseerr Logout Button"
    }

    object LinkHandling {
      const val DIRECTIONS_TEXT = "Link Handling Directions"
    }
  }
...
