...
<resources>
    <string name="settings">Settings</string>
    <string name="login">Login</string>
    <!-- AppearanceSettingsScreen -->
  <string name="AppearanceSettingsScreen__black_backgrounds">Pure Black</string>
    <string name="AppearanceSettingsScreen__black_backgrounds_summary">Dark colors optimized for OLED displays</string>
    <string name="AppearanceSettingsScreen__material_you">Dynamic</string>
    <string name="AppearanceSettingsScreen__material_you_summary">Automatically adapt the app's colors to match your wallpaper</string>
    <string name="feature_settings_color_preference">Colors</string>
    <string name="feature_settings_color">Color</string>
    <string name="feature_settings_choose_a_color">Choose a color</string>
    <!-- AccountSettingsScreen -->
  <string name="feature_settings_account">Account</string>
...
